		- disable node rename action for dirty buffers. it was causing trouble.
		- when loading extensions or when loading nodes from the project file,
		  catch any possible errors due to misbehaving plugins so that at least
		  ProjectViewer won't crash.
		- fix error icon showing for files that only had warnings, when other
		  files had errors reported in the error list plugin.

		Other changes:
		- added methods to ProjectViewer to get/set the folder tree state from
		  a node in the tree, so re-importing can work better.
		- use a new JFileChooser implementation that properly chooses the parent
		  when instantiated from a dialog and not from the main window; also
		  allows to force the viewing of hidden files.
		- added the beginnings of a version control extension to the
		  IconComposer class. Not too happy about it yet.
		- there's now code in place to enable clipping of the node strings
		  when they don't fit in the tree viewport. It's only enabled for the
		  compact view mode, though, since it doesn't make a lot of sense for
		  the other modes and it also doesn't work perfectly.
		- updated a lot of developer documentation in the javadocs.
		- created method to write strings to XML files, escaping any needed
		  chars (instead of having the code copied all over as before)
		- got rid of VPTNode.VPTNodeComparator; implemented the logic in
		  each node implementation (much easier to understand now)
		- focus text area after opening a file from the tree.
		- new locking mechanism to avoid possible race conditions when loading
		  a project in a separate thread.
		- allow EditProjectAction to receive a default parent group for the
		  project being created.
		- made SearchAction.NodeFileSet public by request.

VERSION 2.0.4
	[marcelo vanzin]
		- fixed LaunchBrowserAction remembering the last opened file and
		  ignoring the current selection.
		- fixed bug in IconComposer that prevented PV from working in jEdit 4.1